--- a/app.css
+++ b/app.css
@@ -2,6 +2,7 @@
 
 :root {
   --light-text-color: whitesmoke;
+  --light-bg-color: whitesmoke;
 }
 
 html {
@@ -25,6 +26,14 @@ a {
   text-decoration: none;
   color: inherit;
 }
+
+h3 {
+  font-size: 4rem;
+  margin: 4rem 1.5rem 0 1.5rem;
+  text-align: left;
+}
+
+/* Header Section */
 
 .selected {
   color: orange;
@@ -52,7 +61,7 @@ a {
 }
 
 .title {
-  margin-top: 5rem;
+  margin-top: 4.5rem;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -64,6 +73,42 @@ a {
 
 .central-title {
   font-size: 11rem;
-  font-weight: 200;
-  padding-bottom: 1rem;
+  font-weight: 400;
+}
+
+/* Body Section */
+
+.main-content-container {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  background-color: var(--light-bg-color);
+  padding-bottom: 5rem;
+}
+
+.about-page-content {
+  margin: auto;
+  text-align: left;
+  width: 75%;
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  justify-content: center;
+}
+
+.about-page-content p {
+  font-size: 3rem;
+  line-height: 1.4em;
+  margin: 4rem 2rem 0 2rem;
+}
+
+.footer {
+  width: 100%;
+  height: 100px;
+  background: url("./footer-background.png") no-repeat center;
+  background-size: cover;
+}
+
+.footer-content p {
+  margin: 0;
 }
