--- a/app.css
+++ b/app.css
@@ -29,8 +29,6 @@ a {
 
 h3 {
   font-size: 4rem;
-  margin: 4rem 1.5rem 0 1.5rem;
-  text-align: left;
 }
 
 /* Header Section */
@@ -54,6 +52,7 @@ h3 {
 }
 
 .container {
+  max-width: 100%;
   font-size: 4rem;
   display: flex;
   align-items: center;
@@ -61,7 +60,7 @@ h3 {
 }
 
 .title {
-  margin-top: 4.5rem;
+  margin-top: 4.8rem;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -89,17 +88,22 @@ h3 {
 .about-page-content {
   margin: auto;
   text-align: left;
-  width: 75%;
+  max-width: 120rem;
   display: flex;
   flex-direction: column;
   align-items: left;
   justify-content: center;
 }
 
+
+.about-page-content p, h3{
+  margin: 4rem 4rem 0 4rem;
+  text-align: left;
+}
+
 .about-page-content p {
-  font-size: 3rem;
+  font-size: 2.5rem;
   line-height: 1.4em;
-  margin: 4rem 2rem 0 2rem;
 }
 
 .footer {
